# hks-shell

./: Cargo.toml  README.md  shell.nix
assets/shaders/: glass.wgsl
config/: default.toml
config/niri/: hks-shell.kdl
src/: app.rs  main.rs  main.rs.backup-before-drag  main.rs.backup-broken-drag
src/renderer/: icons.rs  mod.rs
src/search/: desktop.rs  mod.rs
